# dewolf

./: pyproject.toml  requirements.txt
decompiler/backend/: cexpressiongenerator.py
decompiler/frontend/binaryninja/: tagging.py
decompiler/pipeline/controlflowanalysis/: restructuring.py
decompiler/pipeline/controlflowanalysis/restructuring_commons/: acyclic_restructuring.py
decompiler/pipeline/dataflowanalysis/: common_subexpression_elimination.py
